SI21-87: fixed double menu bar and mobile menu bar size on smallest devices

--- a/client/src/components/Layout/layout.module.scss
+++ b/client/src/components/Layout/layout.module.scss
@@ -1,3 +1,9 @@
+@import '../../styles/applications.scss';
+
 .appWrapper {
   display: flex;
+
+  @include mobile-breakpoint {
+    flex-direction: column-reverse;
+  }
 }
