--- a/client/src/components/Sidebar/sidebar.module.scss
+++ b/client/src/components/Sidebar/sidebar.module.scss
@@ -21,6 +21,9 @@
     margin-top: 4rem;
     li {
       padding: 0 0.5rem;
+      .createBtn {
+        display: none;
+      }
       a {
         display: flex;
         justify-content: flex-start;
@@ -42,34 +45,13 @@
       }
     }
   }
-  .mobileMenu {
-    display: none;
-    position: fixed;
-    bottom: 0;
-    padding-bottom: 0.7rem;
-    background: $gray;
-    width: 100vw;
-    z-index: 1;
-    ul {
-      margin-top: 0;
-      li {
-        @include flex($direction: row, $align: center, $justify: center);
-        a {
-          padding: 1.5rem 1.8rem;
-          img {
-            width: 3rem;
-          }
-          span {
-            display: none;
-          }
-        }
-      }
-    }
-  }
+}
 
-  @include tablet-breakpoint {
+@include tablet-breakpoint {
+  .sidebar {
     width: 12rem;
     padding: 3rem 0;
+
     .logo {
       display: none;
     }
@@ -93,21 +75,67 @@
         }
       }
     }
-    .mobileMenu {
-      display: none;
-    }
   }
+}
 
-  @include mobile-breakpoint {
-    width: 0vw;
+@include mobile-breakpoint {
+  .sidebar {
+    position: fixed;
+    bottom: 0;
+    padding-top: 0.2rem;
+    padding-bottom: 0.7rem;
+    background: $gray;
+    width: 100vw;
+    height: auto;
+    z-index: 1;
     .logo {
       display: none;
     }
-    .desktopMenu {
+    .icon {
       display: none;
     }
-    .mobileMenu {
-      display: block;
+    ul {
+      margin-top: 0;
+      li {
+        @include flex($direction: row, $align: center, $justify: space-around);
+        .createBtn {
+          display: block;
+        }
+        a {
+          padding: 1.2rem;
+          img {
+            width: 3rem;
+          }
+          span {
+            display: none;
+          }
+        }
+      }
     }
   }
 }
+
+/* .mobileMenu {
+  display: none;
+  position: fixed;
+  bottom: 0;
+  padding-bottom: 0.7rem;
+  background: $gray;
+  width: 100vw;
+  z-index: 1;
+  ul {
+    margin-top: 0;
+    li {
+      @include flex($direction: row, $align: center, $justify: center);
+      a {
+        padding: 1.5rem 1.8rem;
+        img {
+          width: 3rem;
+        }
+        span {
+          display: none;
+        }
+      }
+    }
+  }
+} */
